src/scss/style.scss
$feature-red: #fc5032;
$feature-yellow: #ffff63;
$heading-light-grey: #e6e6e6;
$heading-dark-grey: #363636;
$bulma-blue: hsl(217, 71%, 53%);

@keyframes blink {
  0% {
    color: white;
  }
  50% {
    color: $feature-yellow
  }
  100% {
    color: white;
  }
}

.review-username {
  color: $bulma-blue;
}

// Styles applying to  whole page
html {
  //begin body styles
  body {
    color: $heading-dark-grey;

    h1.title {
      color: $feature-red;
      font-family: 'Press Start 2P', cursive;
      font-size: 30px;
      padding-top: 20px;
    }

    h2 {
      &.review-author {
        color: $heading-dark-grey;
      }
      strong {
        font-weight: bold;
      }
    }

    h4 {
      &.address {
        color: $heading-dark-grey;
      }
    }

    a {
      color: $bulma-blue;
    }

    div.container {
      padding: 0 15px;
    }

    //styling on buttons
    .button {
      border: 3px solid transparent;
      border-radius: 20px;
      padding: 20px;
      &.enforce-center {
        flex-direction: column;
      }

      &.is-warning {
        background-color: $feature-yellow;
        &:hover {
          background-color: darken($feature-yellow, 20%);
        }
      }
    }

    .button-wrapper {
      margin: 10px 0;
    }

    //styles on the nav
    .navbar {
      a {
        color: $heading-dark-grey;
        &:hover {
          border-bottom: $feature-yellow;
        }
        .navbar-brand {
          .navbar-item {

          }
        }
      }
      .navbar-brand .navbar-item {
        font-size: 2rem;
        img {
          height: 200%;
        }
      }
      .navbar-brand .navbar-item, .navbar-brand .navbar-burger, .navbar-menu .navbar-start .navbar-item, .navbar-menu .navbar-end .navbar-item {
        color: $heading-dark-grey;
        border-color: $heading-dark-grey;
        &:hover {
          background-color: $feature-yellow;
          color: $heading-dark-grey;
        }

      }
    }

    //form styles
    form {
      .field {
        .label {
          color: $heading-dark-grey;
        }
      }
    }
    //styles on the hero
    .hero.is-success{
      background-color: $feature-red;
      font-family: 'Press Start 2P', cursive;
      .container {
        h1.title {
          font-size: 100px;
          color: $feature-yellow;
        }
        h2.subtitle {
          font-size: 50px;
          &:hover {
            a{
              animation: blink 0.3s ease 0s infinite;
            }
          }
        }
      }
    }

    //styles relating to cards
    .card {
      border-radius: 10px;
      min-height: 250px;
      border: 3px solid $heading-light-grey;
      box-shadow: none;
      margin-top: 20px;
      h3.title {
        font-size: 1.5rem;
      }
      h4 {
        font-size: 1rem;
      }
      &:hover {
        background-color: $feature-yellow;
        border: 3px solid $feature-yellow;
      }

    }

  }
}

div.review-info{
  font-weight: bold;
  h3 {
    font-weight: bold;
    .user-name {
      color: $feature-red;
    }
  }
}

div.review-text {
  padding: 20px 0;
}



@media screen and (max-width: 768px) {
  body {
    .card {
      height: initial;
      &:hover {
        h3.title {
          border-bottom: 4px solid $heading-dark-grey;
        }
      }
    }
  }
}

